--- a/source/css/_third-party/twikoo.styl
+++ b/source/css/_third-party/twikoo.styl
@@ -70,6 +70,8 @@ if hexo-config('comments.use') == 'Twikoo'
 
   .tk-replies
     max-height: 10rem !important
+    &.tk-replies-expand
+      max-height: none !important
     .tk-comment
       border-top: var(--style-border-dashed);
       border-radius: 12px;
