--- a/layout/includes/anzhiyu/anzhiyu-js.pug
+++ b/layout/includes/anzhiyu/anzhiyu-js.pug
@@ -26,3 +26,4 @@ script(data-pjax).
 
   anzhiyu.getCustomPlayList();
   anzhiyu.addEventListenerConsoleMusicList(false);
+  addFriendLinksInFooter()
