--- a/source/css/_layout/footer.styl
+++ b/source/css/_layout/footer.styl
@@ -1,6 +1,6 @@
 #footer
   position: relative
-  background: var(--global-bg)
+  background: linear-gradient(180deg, var(--anzhiyu-card-bg-none) 0%, var(--anzhiyu-card-bg) 25%);
   background-attachment: scroll
   background-position: bottom
   background-size: cover
@@ -22,12 +22,86 @@
   padding: 40px 20px
   color: var(--light-grey)
   text-align: center
+  #footer_deal
+    justify-content: center;
+    display: flex;
+    padding-top: 2rem;
+    align-items: center;
+    .deal_link
+      display: flex;
+      margin: 1rem 27px;
+      color: var(--anzhiyu-card-bg);
+      border-radius: 3rem;
+      width: 32px;
+      height: 32px;
+      background: var(--anzhiyu-fontcolor);
+      justify-content: center;
+      align-items: center;
+      transition: 0.3s;
+      &:hover
+        color: var(--anzhiyu-white);
+        background: var(--anzhiyu-main);
 
+    .footer_mini_logo
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      margin: 0 1rem;
+      cursor: pointer;
+      transition: cubic-bezier(0, 0, 0, 1.29) 0.5s;
+      -webkit-user-select: none;
+  #anzhiyu-footer
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    max-width: 1200px;
+    margin: 1rem auto;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 0 1rem;
+    .footer-group
+      min-width: 120px;
+      .footer-title-group
+        display: flex;
+        align-items: center;
+        a
+          margin-left: 8px
+          margin-top: 4px;
+          line-height: 32px;
+        i
+          line-height: 1;
+          color: var(--anzhiyu-secondtext);
+          transition: 0.3s;
+          font-size: 16px;
+          opacity: 0.6;
+    .footer-title
+      color: var(--anzhiyu-secondtext);
+      font-size: 1rem;
+      text-align: left;
+    .footer-links
+      display: flex;
+      flex-direction: column;
+    .footer-item
+      font-size: 1rem;
+      line-height: 1rem;
+      margin: 8px 0;
+      color: var(--anzhiyu-fontcolor);
+      margin-right: auto;
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      max-width: 120px;
+      cursor: pointer;
+      padding: 2px 0;
+      text-decoration: none
+      &:hover
+        color: var(--anzhiyu-theme);
   a
     color: var(--light-grey)
-
-    &:hover
-      text-decoration: underline
+  i
+    font-size: 0.9rem;
+    line-height: 0.9rem;
+    height: 0.9rem;
 
   .footer-separator
     margin: 0 4px
