--- a/source/css/_layout/footer.styl
+++ b/source/css/_layout/footer.styl
@@ -5,7 +5,6 @@
   background-position: bottom
   background-size: cover
   +maxWidth768()
-    background: var(--anzhiyu-background);
     z-index: 3
     margin-top: -1px;
 
@@ -27,6 +26,9 @@
     display: flex;
     padding-top: 2rem;
     align-items: center;
+    +maxWidth768()
+      flex-wrap: wrap;
+      flex-direction: row;
     .deal_link
       display: flex;
       margin: 1rem 27px;
@@ -50,6 +52,8 @@
       cursor: pointer;
       transition: cubic-bezier(0, 0, 0, 1.29) 0.5s;
       -webkit-user-select: none;
+      +maxWidth768()
+        display: none;
   #anzhiyu-footer
     display: flex;
     flex-direction: row;
