--- a/source/css/_layout/404.styl
+++ b/source/css/_layout/404.styl
@@ -41,6 +41,7 @@
       background-color: rgb(48, 122, 246)
       background-position: center center
       background-size: cover
+      height: 100%;
       +maxWidth768()
         -webkit-box-flex: 1;
         flex: 1 1 0%;
