移动端文章样式修改 提高表情放大功能性能 修复页脚可能存在的bug

--- a/layout/includes/anzhiyu/anzhiyu-js.pug
+++ b/layout/includes/anzhiyu/anzhiyu-js.pug
@@ -26,4 +26,9 @@ script(data-pjax).
 
   anzhiyu.getCustomPlayList();
   anzhiyu.addEventListenerConsoleMusicList(false);
-  addFriendLinksInFooter()
+  setTimeout(()=>{
+    if (typeof addFriendLinksInFooter === "function") {
+      addFriendLinksInFooter();
+    }
+  }, 200)
+
