--- a/source/css/_layout/footer.styl
+++ b/source/css/_layout/footer.styl
@@ -115,3 +115,5 @@
     max-height: 1.4em
     width: auto
     vertical-align: text-bottom
+[data-theme=light] .post #footer #footer-wrap
+  background: var(--anzhiyu-background);
