404页面修改，集成部分工具函数，滚动条样式调整

--- a/source/css/_layout/404.styl
+++ b/source/css/_layout/404.styl
@@ -89,7 +89,7 @@
   transition: color 1s ease 0s
 
 #body-wrap
-  &.error 
+  .error-box 
     display: flex;
     flex-direction: column;
     justify-content: center;
