移除页脚h3标签

--- a/layout/includes/footer.pug
+++ b/layout/includes/footer.pug
@@ -16,14 +16,14 @@
     #anzhiyu-footer
       each item, index in projectList
         .footer-group
-          h3.footer-title=item.title
+          .footer-title=item.title
           .footer-links
             each iten, indey in item.links
               a.footer-item(title=iten.title target="_blank" href=iten.link)=iten.title
       if theme.footer.list.randomFriends > 0
         .footer-group
           .footer-title-group
-            h3.footer-title 友链
+            .footer-title 友链
             a.random-friends-btn#footer-random-friends-btn(href="javascript:addFriendLinksInFooter();" title="换一批友情链接")
               i.anzhiyufont.anzhiyu-icon-arrow-rotate-right
           .footer-links#friend-links-in-footer
