--- a/source/css/_layout/footer.styl
+++ b/source/css/_layout/footer.styl
@@ -70,7 +70,6 @@
         align-items: center;
         a
           margin-left: 8px
-          margin-top: 4px;
           line-height: 32px;
         i
           line-height: 1;
@@ -82,6 +81,7 @@
       color: var(--anzhiyu-secondtext);
       font-size: 1rem;
       text-align: left;
+      font-weight: 600;
     .footer-links
       display: flex;
       flex-direction: column;
