--- a/layout/includes/footer.pug
+++ b/layout/includes/footer.pug
@@ -7,7 +7,7 @@
       each item, index in leftInfo
         a.deal_link(href=url_for(item.link) title=item.title)
           i(class=item.icon)
-      img.footer_mini_logo(title="返回顶部", onclick="anzhiyu.scrollToDest(0, 500)", src=centerImg)
+      img.footer_mini_logo(title="返回顶部", onclick="anzhiyu.scrollToDest(0, 500)", src=centerImg, size="50px")
       each item, index in rightInfo
         a.deal_link(href=url_for(item.link) title=item.title)
           i(class=item.icon)
