--- a/source/css/_custom/skills/skills.css
+++ b/source/css/_custom/skills/skills.css
@@ -25,7 +25,7 @@
   border-radius: 30px;
 }
 #skills-tags-group-all .tags-group-icon img {
-  width: 60%;
+  width: 60px;
   margin: 0 auto !important;
 }
 #skills-tags-group-all .tags-group-icon-pair .tags-group-icon:nth-child(even) {
