- 漏洞   【algolia搜索】修复未开启快捷键导致的algolia搜索bug - 样式   【页面边距过宽】修复部分页面边距过宽   【关于】关于页面打赏按钮遮盖问题 - 配置   【页脚】页脚默认图标更新 - 优化   【SEO】优化SEO，进一步提高Lighthouse评分   【CSS】去除冗余css - 功能   【catalog】分类条支持右滑滚动

--- a/source/css/_page/common.styl
+++ b/source/css/_page/common.styl
@@ -3,13 +3,13 @@
   flex-direction: column
   min-height: 100vh
   +maxWidth768()
-    #home_top ~ main 
+    .layout
       padding: 0;
-    &.post
-      .layout
-        padding: 0;
-    #bbTimeList ~ main
-      padding: 0;
+    #category,#tag
+      padding: 40px 15px 20px;
+      background: var(--anzhiyu-background)
+    #archive
+      background: var(--anzhiyu-background)
   
 .layout
   display: flex
