--- a/source/css/_third-party/twikoo.styl
+++ b/source/css/_third-party/twikoo.styl
@@ -37,6 +37,9 @@ if hexo-config('comments.use') == 'Twikoo'
     background-color: var(--anzhiyu-card-bg);
 
   #twikoo 
+    .tk-actions
+      a
+       cursor pointer
     .tk-nick
       line-height: 40px;
     .tk-extras
