【home顶部图】支持index_img图片配置

--- a/layout/includes/header/index.pug
+++ b/layout/includes/header/index.pug
@@ -27,7 +27,7 @@ if !theme.disable_top_img && page.top_img !== false
 else
   - var top_img = false
   - var isHomeClass = 'not-top-img'
-header#page-header(class=`${isHomeClass}`)
+header#page-header(class=`${isHomeClass}` style=bg_img)
   !=partial('includes/header/nav', {}, {cache: true})
   if top_img !== false
     if is_post()
@@ -58,8 +58,7 @@ header#page-header(class=`${isHomeClass}`)
           #site_social_icons
             !=fragment_cache('social', function(){return partial('includes/header/social')})
       #scroll-down
-        svg.icon.scroll-down-effects(aria-hidden="true")
-          use(xlink:href="#icon-angle-down")
+        i.anzhiyufont.anzhiyu-icon-angle-down.scroll-down-effects
     else
       #page-site-info
         h1#site-title=site_title
