--- a/source/css/_layout/head.styl
+++ b/source/css/_layout/head.styl
@@ -55,6 +55,10 @@
     bottom: 0
     width: 100%
     cursor: pointer
+    z-index: 11;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     .scroll-down-effects
       position: relative
