--- a/layout/includes/head/pwa.pug
+++ b/layout/includes/head/pwa.pug
@@ -6,7 +6,7 @@ if(theme.pwa.mask_icon)
 
 if(theme.pwa.apple_touch_icon) 
   link(rel="apple-touch-icon" sizes="180x180" href=url_for(theme.pwa.apple_touch_icon))
-  link(rel="apple-touch-icon-precomposed", sizes="180x180", hhref=url_for(theme.pwa.apple_touch_icon))
+  link(rel="apple-touch-icon-precomposed", sizes="180x180", href=url_for(theme.pwa.apple_touch_icon))
 if(theme.pwa.favicon_32_32) 
   link(rel="icon" type="image/png" sizes="32x32" href=url_for(theme.pwa.favicon_32_32))
 if(theme.pwa.favicon_16_16)
