--- a/source/css/_layout/head.styl
+++ b/source/css/_layout/head.styl
@@ -6,6 +6,7 @@
   &.full_page
     height: $index_top_img_height
     background-attachment: fixed
+    border-radius: 0
 
     #site-info
       position: absolute
