--- a/source/css/_layout/oneGraphFlow.styl
+++ b/source/css/_layout/oneGraphFlow.styl
@@ -5,3 +5,6 @@ if hexo-config('index_img')
   #page-header #nav a, #page-header #nav #site-name, #page-header #nav #toggle-menu,#page-header:not(.not-top-img) #nav .back-home-button
     +maxWidth768()
       color: var(--font-color) !important;
+  div#bbTimeList
+    +maxWidth768()
+      margin: 20px 15px !important;
