--- a/source/css/_page/homepage.styl
+++ b/source/css/_page/homepage.styl
@@ -2,9 +2,9 @@
   & > .recent-post-item:not(:first-child)
     margin-top: 20px
     animation: slide-in 0.6s 0.4s backwards;
+    will-change: transform;
     +maxWidth768()
       margin: 20px 20px 0
-
   & > .recent-post-item
     @extend .cardHover
     display: flex
@@ -15,6 +15,7 @@
     position: relative
     border-radius: 12px;
     box-shadow: none;
+    transition: all 0.3s ease 0s;
     .recent-post-info
       margin-top: 0px;
       position: relative;
@@ -75,7 +76,8 @@
 
       img.post_bg
         border-radius: 0px
-        @extend .imgHover
+        transition: all 0.6s ease 0s;
+        object-fit: cover;
 
       &.right
         order: 1
@@ -211,6 +213,7 @@ if hexo-config('article_double_row') == true
       .post_cover
         width: 100%
         height: 200px
+        transition: 1s !important;
         
         img.post_bg
           width: 100%
