响应式支持 1200px close #36

--- a/source/css/_global/function.styl
+++ b/source/css/_global/function.styl
@@ -97,8 +97,8 @@ minWidth768()
   @media screen and (min-width: 768px)
     {block}
 
-maxWidth1024()
-  @media screen and (max-width: 1024px)
+maxWidth1200()
+  @media screen and (max-width: 1200px)
     {block}
 
 maxWidth900()
@@ -113,6 +113,9 @@ minWidth900()
   @media screen and (min-width: 900px)
     {block}
 
+minWidth1200()
+  @media screen and (min-width: 1200px)
+    {block}
 minWidth2000()
   @media screen and (min-width: 2000px)
     {block}
