--- a/source/css/_layout/head.styl
+++ b/source/css/_layout/head.styl
@@ -465,6 +465,8 @@
     padding-bottom: 6px
     font-size: .78em
     cursor: pointer
+    &:hover
+      color: var(--anzhiyu-white) !important
 
     &:not(.child)
       &:after
