--- a/source/css/_page/homepage.styl
+++ b/source/css/_page/homepage.styl
@@ -76,6 +76,8 @@
 
       img.post_bg
         border-radius: 0px
+        height 100%
+        width 100%
         transition: all 0.6s ease 0s;
         object-fit: cover;
 
@@ -90,8 +92,10 @@
       width: 57%
 
       +maxWidth768()
-        padding: 20px 20px 10px
+        padding: 20px 20px 10px !important
         width: 100%
+        .newPost
+          top: 1px !important;
 
       &.no-cover
         width: 100%
@@ -192,67 +196,86 @@ if hexo-config('home_top.swiper.enable') == true
       height: 280px;
     #swiper_container_blog
       padding: 0 10px;
-  +maxWidth1024()
+  +maxWidth1200()
     div#bannerGroup {
       display: none !important;
     }
 
 if hexo-config('article_double_row') == true
-  #recent-posts
-    align-content: flex-start
-    display: flex
-    flex-wrap: wrap
-    justify-content: space-between
+  +maxWidth1200()
+    #recent-posts > .recent-post-item >.recent-post-info > .article-title
+      line-height: 30px;
+      font-weight: bold;
+      color: var(--anzhiyu-fontcolor);
+      width: 100%;
+      transition: .3s;
+      font-size: 1.2rem;
+      -webkit-line-clamp: 2;
+      display: -webkit-box;
+      overflow: hidden;
+      -webkit-box-orient: vertical;
+    #recent-posts > .recent-post-item >.recent-post-info
+      padding: 0px 40px 0px;
+    #recent-posts > .recent-post-item .recent-post-info .newPost
+      top: -10px;
+    #recent-posts > .recent-post-item.lastestpost-item .recent-post-info
+      padding: 10px 40px 0px;
+  +minWidth1200()
+    #recent-posts
+      align-content: flex-start
+      display: flex
+      flex-wrap: wrap
+      justify-content: space-between
 
-    &>.recent-post-item
-      margin-top: 1rem
-      display: inline-block
-      height: auto
-      width: 49%
+      &>.recent-post-item
+        margin-top: 1rem
+        display: inline-block
+        height: auto
+        width: 49%
 
-      .post_cover
-        width: 100%
-        height: 200px
-        transition: 1s !important;
-        
-        img.post_bg
+        .post_cover
           width: 100%
-          height: 100%
+          height: 200px
+          transition: 1s !important;
+          
+          img.post_bg
+            width: 100%
+            height: 100%
 
-      .recent-post-info>.content
+        .recent-post-info>.content
+          display: none
+
+        -webkit-flex-direction: column
+        -ms-flex-direction: column
+        flex-direction: column
+
+        .left_radius
+          border-radius: 8px 8px 0 0
+
+        .right_radius
+          border-radius: 8px 8px 0 0
+
+        height: auto !important
+
+        .recent-post-info
+          width 100%
+          >.article-title
+            -webkit-line-clamp: 1
+            margin-top: .3rem
+            margin-bottom: .3rem
+            color: var(--text-highlight-color)
+            font-size: 1.2em
+            line-height: 1.4
+
+          >.article-meta-wrap
+            margin-bottom: 1rem
+
+    @media screen and (max-width:768px)
+      #recent-posts>.recent-post-item
+        width: 100%
+
+      #recent-posts > .recent-post-item >.recent-post-info > .article-meta-wrap > .tags > .article-meta__separator
         display: none
-
-      -webkit-flex-direction: column
-      -ms-flex-direction: column
-      flex-direction: column
-
-      .left_radius
-        border-radius: 8px 8px 0 0
-
-      .right_radius
-        border-radius: 8px 8px 0 0
-
-      height: auto !important
-
-      .recent-post-info
-        width 100%
-        >.article-title
-          -webkit-line-clamp: 1
-          margin-top: .3rem
-          margin-bottom: .3rem
-          color: var(--text-highlight-color)
-          font-size: 1.2em
-          line-height: 1.4
-
-        >.article-meta-wrap
-          margin-bottom: 1rem
-
-  @media screen and (max-width:768px)
-    #recent-posts>.recent-post-item
-      width: 100%
-
-    #recent-posts > .recent-post-item >.recent-post-info > .article-meta-wrap > .tags > .article-meta__separator
-      display: none
 
 #content-inner #recent-posts > .recent-post-item > .recent-post-info > .content
   opacity: 0;
