【文章】修复移动端标签分类可能超出的问题

--- a/source/css/_layout/ptool.styl
+++ b/source/css/_layout/ptool.styl
@@ -24,7 +24,8 @@
     display: flex;
     align-items: center;
     margin-bottom: 0.5rem;
-    // width 100%
+    +maxWidth768()
+      flex-direction: column;
     
 .share-link
   margin-left: 0.5rem;
@@ -102,3 +103,4 @@ if hexo-config('ptool.enable') == true && !hexo-config('ptool.mode')
 if hexo-config('ptool.enable') == true && hexo-config('ptool.categories')
   #post .tag_share
     margin-bottom: 2rem
+    flex-direction: column;
