--- a/source/css/_layout/head.styl
+++ b/source/css/_layout/head.styl
@@ -177,17 +177,18 @@
     +maxWidth768()
       padding: 11rem 6% 0;
       align-items: center;
-      &:after
-        display: block
-        position: absolute;
-        content: "";
-        width: 100%;
-        height: 100%;
-        bottom: 0;
-        left: 0;
-        box-shadow: 0px -214px 287px 45px var(--anzhiyu-bar-background) inset;
-        z-index: 0;
-        animation: none
+      if hexo-config('post_meta.post.rotate')
+        &:after
+          display: block
+          position: absolute;
+          content: "";
+          width: 100%;
+          height: 100%;
+          bottom: 0;
+          left: 0;
+          box-shadow: 0px -214px 287px 45px var(--anzhiyu-bar-background) inset;
+          z-index: 0;
+          animation: none
 
   &.not-top-img
     margin-bottom: 10px
