--- a/layout/includes/header/index.pug
+++ b/layout/includes/header/index.pug
@@ -11,6 +11,7 @@ if !theme.disable_top_img && page.top_img !== false
     - top_img = top_img ? top_img : (theme.category_img !== false ? theme.category_img || theme.default_top_img : false)
   else if is_home()
     - var top_img = theme.index_img !== false ? theme.index_img || theme.default_top_img : false
+    - var home_index_img = theme.index_img !== false ? theme.index_img || theme.default_top_img : false
   else if is_archive()
     - var top_img = theme.archive_img !== false ? theme.archive_img || theme.default_top_img : false
   else
@@ -19,6 +20,7 @@ if !theme.disable_top_img && page.top_img !== false
   if top_img !== false
     - var imgSource = top_img && top_img.indexOf('/') !== -1 ? url_for(top_img) : top_img
     - var bg_img = top_img ? imgSource : ''
+    - var home_index_img_bg = home_index_img ? home_index_img : ''
     - var site_title = page.title || page.tag || page.category || config.title
     - var isHomeClass = is_home() ? 'full_page' : 'not-home-page'
     - is_post() ? isHomeClass = 'post-bg' : isHomeClass
@@ -27,7 +29,7 @@ if !theme.disable_top_img && page.top_img !== false
 else
   - var top_img = false
   - var isHomeClass = 'not-top-img'
-header#page-header(class=`${isHomeClass}` style=bg_img)
+header#page-header(class=`${isHomeClass}` style=home_index_img_bg)
   !=partial('includes/header/nav', {}, {cache: true})
   if top_img !== false
     if is_post()
